shop: fixed currency formatting
git-svn-id: file:///home/gjoseph/subversion-migration/svn-repo-copy/forge/magnolia-shop/trunk@49623 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f